# MIICA-Resource-for-ARM-Linux

./: .gitignore  CMakeLists.txt  liblist.txt  liblist.xml  setup.sh  toolchain.cmake.template
src/: os.c  soem.c  stdio.c
